Fixed : Background-position of img in ListItem to align perfect with text

--- a/HotWax_2021/Code Files/Hotwax_Stylesheet_2021.css
+++ b/HotWax_2021/Code Files/Hotwax_Stylesheet_2021.css
@@ -2230,7 +2230,7 @@ input[type="button"]:focus {}
   margin-bottom: 7px;
   padding-left: 30px;
   background-image: url(//cdn2.hubspot.net/hubfs/6357099/HotWax_February2020/Images/red-hexagon-outline.svg);
-  background-position: 0% 50%;
+  background-position: top 6px left;
   background-size: 18px;
   background-repeat: no-repeat;
 }
